# zynthian-stm32controller

./: .gitmodules  README.md  build.sh  updatefirmware.sh
firmware/zynthian-stm32controller/: zynthian-stm32controller.ino
host/: CMakeLists.txt  main.cpp
